--- a/Application/Home/View/Public/nav.html
+++ b/Application/Home/View/Public/nav.html
@@ -126,4 +126,5 @@
     function hiddenLogin(){
         document.getElementById('login_bg').className="login_hidden";
     }
+    document.getElementById('login_bg').onclick = function(){ hiddenLogin()};
 </script>
