--- a/Public/css/home/index.css
+++ b/Public/css/home/index.css
@@ -53,7 +53,6 @@ ul,dl,ol{
 }
 
 #banner-container img{
-	/*max-width: 1920px;*/
 	min-width: 1100px;
 	width: 100%;
 	vertical-align: bottom;
@@ -89,7 +88,7 @@ ul,dl,ol{
 .news_part{
     float: left;
     width: 600px;
-	height: 315px;
+	height: 344px;
     border: 1px solid #d0d5d9;
     margin: 0 0 10px 10px;
     box-sizing: border-box;
@@ -102,7 +101,6 @@ ul,dl,ol{
     line-height: 40px;
     border-top: 1px solid #d0d5d9;
     border-bottom: 1px solid #d0d5d9;
-	/*background-image: linear-gradient(to bottom,#fff,#eef3f7);*/
 	background-color: #f1f6f9;
 }
  .news_part > p > a{
@@ -163,43 +161,59 @@ ul.four_part_tip a{
 }
 
 
-ul.index_four_part{
+ul#index_four_part{
 	float: left;
 	overflow: hidden;
-	/*width: 480px;*/
+	width: 480px;
 }
-ul.index_four_part>li{
+ul#index_four_part>li{
 	float: left;
 	margin: 0 0 10px 10px;
-	width: 210px;
-	height: 315px;
+	width: 230px;
+	height: 167px;
 	border: 1px solid #d0d5d9;
+	box-sizing:border-box;
 	border-radius: 5px;
 	text-align: center;
-	/*background-image: linear-gradient(to bottom,#fff,#eef3f7);*/
 	background-color: #f1f6f9;
 }
-ul.index_four_part>li h2{	
+ul#index_four_part>li h2{	
 	font-size: 20px;
 	height: 50px;
 	line-height: 50px;
 }
 
-/*ul.index_four_part>li a{
+ul#index_four_part>li a{
 	color: #000;
 }
-ul.index_four_part>li a:hover{
+ul#index_four_part>li a:hover{
 	color: #f54c00;
 }
-*/
 
-/*ul.index_four_part>li>ul{
+ul#index_four_part>li div{
+	width: 100px;
+	height: 100px;
+	text-align: center;
 	float: left;
-}*/
-/*ul.index_four_part>li{
+}
+ul#index_four_part>li>div>img{
+	-webkit-transition: transform 0.4s linear;
+	-o-transition: transform 0.4s linear;
+	transition: transform 0.4s linear;
+}
+ul#index_four_part>li:hover img{
+	-webkit-transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	-o-transform: scale(1.2);
+	transform: scale(1.2);
+}
+ul#index_four_part>li>ul{
+	float: left;
+}
+ul#index_four_part>li li>a{
 	display: inline-block;
 	width: 100%;
 	height: 35px;
 	line-height: 35px;
 	font-size: 17px; 
-}*/
+}
