--- a/Public/css/home/nav.css
+++ b/Public/css/home/nav.css
@@ -109,20 +109,21 @@ a{
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 0;
 	background: rgba(80,80,80,0.5);
-	-webkit-transition: all 0.3s linear;
-	-o-transition: all 0.3s linear;
-	transition: all 0.3s linear;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
+	-ms-transition: all .3s linear;
+	transition: all .3s linear;
+	opacity: 0;
+	z-index: -1;
 }
 .login_show{
-	z-index: 999;
-	opacity: 1;
+	z-index: 999 !important;
+	height: 100% !important;
+	opacity: 1 !important;
 }
-.login_hidden{
-	z-index: -1;
-	opacity: 0;
-}
+
 #login_container{
 	width: 700px;
 	height: 456px;
