fixed add result and show result bug

--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -84,7 +84,7 @@
             <div class="mainlefttitle"><img src="__PUBLIC__/images/科技团队.png"></div>
             <div class="mainbtn">
                 <div class="navlist">
-                    <a href="{:U('Team/teamlist')}">专家团队</a>
+                    <a href="{:U('Team/teamlist')}">团队信息</a>
                 </div>
                  <div class="navlist active">
                     <a href="{:U('Expert/expertlist')}">专家信息</a>
