--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -85,9 +85,9 @@
          <!-- 四图文 -->
         <ul id="index_four_part">
             <li>
-                <h2>专家团队</h2>
+                <h2>团队信息</h2>
                 <div>
-                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                    <img src="__PUBLIC__/images/团队信息.jpg" alt="">
                 </div>
                 <ul class="four_part_tip">
                     <li><a href="{:U('Expert/expertlist')}">专家信息</a></li>
@@ -97,21 +97,21 @@
             <li>
                 <h2>科技成果</h2>
                 <div>
-                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                    <img src="__PUBLIC__/images/团队信息.jpg" alt="">
                 </div>
                 <ul class="four_part_tip">
                     <li><a href="{:U('Result/resultlist')}">成果集锦</a></li>
                     <?php if (session('uid')): ?>
                         <li><a href="{:U('Result/add')}">成果发布</a></li>
                     <?php else: ?>
-                        <li><a href="{:U('Public/login')}">成果发布</a></li>
+                        <li><a href="javascript:showLogin()">成果发布</a></li>
                     <?php endif ?>
                 </ul>
             </li>
             <li>
                 <h2>企业需求</h2>
                 <div>
-                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                    <img src="__PUBLIC__/images/团队信息.jpg" alt="">
                 </div>
                 <ul class="four_part_tip">
                     <li><a href="{:U('Demand/demandlist')}">需求集锦</a></li>
@@ -119,17 +119,17 @@
                         <?php if(session('type') == 2):?>
                           <li><a href="{:U('Demand/add')}">需求发布</a></li>
                         <?php else: ?>
-                            <li><a href="javascript:void(0);" onclick="waring()">需求发布</a></li>
+                            <li><a href="javascript:alert('只有企业用户可以发布');">需求发布</a></li>
                         <?php endif ?>
                     <?php else: ?>
-                        <li><a href="{:U('Public/login')}">需求发布</a></li>
+                        <li><a href="javascript:showLogin()">需求发布</a></li>
                     <?php endif ?>
                 </ul>
             </li>
             <li>
                 <h2>协同管理</h2>
                 <div>
-                    <img src="__PUBLIC__/images/专家团队.jpg" alt="">
+                    <img src="__PUBLIC__/images/团队信息.jpg" alt="">
                 </div>
                 <ul class="four_part_tip">
                     <li><a href="{:U('Cooperation/index',array('type'=>3))}">协同高校</a></li>
@@ -143,6 +143,7 @@
 
     <include file = "Public/footer" />
     <script src="__PUBLIC__/js/jquery.min.js"></script>
+
     <script>
         $(function(){
 
