--- a/Application/Home/View/Personal/my_research.html
+++ b/Application/Home/View/Personal/my_research.html
@@ -66,7 +66,7 @@
 			<?php if(!$my_research):?>
 				<div class="list" style="overflow:hidden;">
 					<h3 style="float:left;">暂未发布研究成果</h3>
-					<a href="{:U('Team/add')}">成果发布</a>
+					<a href="{:U('Result/add')}">成果发布</a>
 				</div>
 			<?php endif?>
 		</div>
