--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -11,7 +11,7 @@
             <a href="{:U('News/newslist',array('type'=>2))}"><p>♦业内资讯</p></a>
         </div>
         <div id="footerlist">
-            <a href="{:U('Team/teamlist')}"><h1>专家团队</h1></a>
+            <a href="{:U('Team/teamlist')}"><h1>团队信息</h1></a>
             <a href="{:U('Expert/expertlist')}"><p>♦专家信息</p></a>
         </div>
         <div id="footerlist">
