--- a/Application/Home/View/Team/team.html
+++ b/Application/Home/View/Team/team.html
@@ -36,7 +36,7 @@
         <span>您的位置：</span>
         <a href="__ROOT__">首页</a>
         <span>></span>
-        <a href="{:U('Team/teamlist')}">专家团队</a>
+        <a href="{:U('Team/teamlist')}">团队信息</a>
         <span>>&nbsp;团队信息</span>
         
         <h3 class="caption">团队信息</h3>
