--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -105,7 +105,7 @@
                 <div class="mainbtn">
                
                 <div class="navlist active">
-                    <a href="{:U('Team/teamlist')}">专家团队</a>
+                    <a href="{:U('Team/teamlist')}">团队信息</a>
                 </div>
                  <div class="navlist">
                     <a href="{:U('Expert/expertlist')}">专家信息</a>
@@ -117,7 +117,7 @@
                 <div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">团队信息</div>
                 <div id="position">
-                    <a href="#">专家团队</a>
+                    <a href="#">团队信息</a>
                      <span>&nbsp;>&nbsp;</span>
                      <a href="__ROOT__">首页</a>
                     <span>您的位置：</span>
