--- a/Application/Home/View/Expert/expert.html
+++ b/Application/Home/View/Expert/expert.html
@@ -65,7 +65,7 @@
             <span>您的位置：</span>
             <a href="__ROOT__">首页</a>
             <span>></span>
-            <a href="{:U('Team/teamlist')}">专家团队</a>
+            <a href="{:U('Team/teamlist')}">团队信息</a>
             <span>>&nbsp;专家信息</span>
         </div>
         
