--- a/Application/Home/View/Public/nav.html
+++ b/Application/Home/View/Public/nav.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="nav-tip" id="nav_expert">
-            <a href="{:U('Team/teamlist')}">专家团队</a>
+            <a href="{:U('Team/teamlist')}">团队信息</a>
             <div class="nav-list">
                 <p>
                     <a href="{:U('Expert/expertlist')}">专家信息</a>
