change footer 'order by' to 'owner'

--- a/Application/Home/View/News/news.html
+++ b/Application/Home/View/News/news.html
@@ -87,10 +87,11 @@
         var childnode = hereNode.parentNode.childNodes.className = "nav-tip";
         hereNode.className = " nav-tip nav_active ";
 
-        var news_picture = document.getElementById('news_picture')
-        if (news_picture.src == "__ROOT__/") {
-            news_picture.src = "";
-        }
+        // var news_picture = document.getElementById('news_picture');
+        // console.log(news_picture.src);
+        // if (news_picture.src == "__ROOT__/") {
+        //     news_picture.src = "";
+        // }
     </script>
 </body>
 
