--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -38,7 +38,7 @@
 <div id="bottombox">
 	<div id="bottom">
     	<p>copyright:&copy;江苏科技大学&江苏科技大学苏州理工学院</p>
-        <p>order by <a href="javascript:void(0);" onclick="toMaster()">cm&xj</a></p>
+        <p>owner: <a href="javascript:void(0);" onclick="toMaster()">cm&xj</a></p>
        
     </div>
 </div>
