--- a/Application/Home/View/Result/add.html
+++ b/Application/Home/View/Result/add.html
@@ -76,11 +76,9 @@
                 <select class="line-input" name="research_level" id="research_level">
                     <option value="其他">请选择</option>
                     <option value="国家级项目">国家级项目</option>
-                    <option value="省级项目">省级项目</option>
-                    <option value="市级项目">市级项目</option>
-                    <option value="校级项目">校级项目</option>
-                    <option value="院级项目">院级项目</option>
-                    <option value="个人项目">个人项目</option>
+                    <option value="省部级项目">省部级项目</option>
+                    <option value="市厅级项目">市厅级项目</option>
+                    <option value="发明专利">发明专利</option>
                     <option value="其他">其他</option>
                 </select>
                     <span class="must">*</span>
