--- a/Public/css/home/ltIE8.css
+++ b/Public/css/home/ltIE8.css
@@ -22,7 +22,7 @@ button.demand_link,button.result_link{
     background: white;
 }
 .focus{
-    background: blue;
+    background: #1B80D6;
 }
 
 /* nav */
