--- a/Application/Home/View/Personal/modify_team.html
+++ b/Application/Home/View/Personal/modify_team.html
@@ -61,6 +61,8 @@
         </div>
     </form>
     <include file="Public/footer" />
+    <script src="__PUBLIC__/js/personal_calss_main.js"></script>
+    
     <script src="__PUBLIC__/js/jquery.min.js"></script>  
     <script>
         $(function() {
