--- a/Application/Home/View/Result/add.html
+++ b/Application/Home/View/Result/add.html
@@ -11,6 +11,7 @@
     <!-- [endif] -->
     <style>
         #addAward{
+            outline: none;
             height: 30px;
             width: 30px;
             border: 1px solid #a9a9a9;
