--- a/Application/Home/View/Personal/index.html
+++ b/Application/Home/View/Personal/index.html
@@ -83,11 +83,13 @@
     	</div>
     </div>
     <include file="Public/footer" />
-    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/personal_id_body.js"></script>
+    
 </body>
 <script>
-   $(function(){
-        $('#personal_center').addClass('focus').siblings().removeClass('focus');
-   });
+  	var hereNode = document.getElementById('personal_center');
+  	// 去除同级元素的被选中样式
+   	hereNode.parentNode.childNodes.className = "";
+    hereNode.className = "focus";
 </script>
 </html>
