--- a/Application/Home/View/Personal/modify_award.html
+++ b/Application/Home/View/Personal/modify_award.html
@@ -66,11 +66,13 @@
     </div>
 
     <include file="Public/footer"/>
-	<script src="__PUBLIC__/js/jquery.min.js"></script>
+    <script src="__PUBLIC__/js/personal_id_body.js"></script>
+    
 </body>
 <script>
-	$(function(){
-        $('#personal_center').addClass('focus').siblings().removeClass('focus');
-   });
+	var hereNode = document.getElementById('my_research_result');
+  	// 去除同级元素的被选中样式
+   	hereNode.parentNode.childNodes.className = "";
+    hereNode.className = "focus";
 </script>
 </html>
