--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,44 +1,7 @@
-<!-- <div id="footerbox">
-	<div id="footer">
-        <div id="footerlist">
-            <a href="__ROOT__"><h1>网站首页</h1></a>
-            <a href="{:U('Public/aboutus')}"><p>♦平台介绍</p></a>
-        </div>
-        <div id="footerlist">
-            <a href="{:U('News/newslist')}"><h1>信息咨询</h1></a>
-            <a href="{:U('News/newslist',array('type'=>3))}"><p>♦政策法规</p></a>
-            <a href="{:U('News/newslist',array('type'=>1))}"><p>♦市场动态</p></a>
-            <a href="{:U('News/newslist',array('type'=>2))}"><p>♦业内资讯</p></a>
-        </div>
-        <div id="footerlist">
-            <a href="{:U('Team/teamlist')}"><h1>团队信息</h1></a>
-            <a href="{:U('Expert/expertlist')}"><p>♦专家信息</p></a>
-        </div>
-        <div id="footerlist">
-            <a href="{:U('Demand/demand')}"><h1>企业需求</h1></a>
-        </div> 
-        <div id="footerlist">
-            <a href="{:U('Result/result')}"><h1>科技成果</h1></a>
-        </div> 
-        <div id="footerlist">
-            <a href="{:U('Edu/edulist')}"><h1>教育培训</h1></a>
-            <a href="{:U('Edu/edulist',array('type'=>3))}"><p>♦学历教育</p></a>
-            <a href="{:U('Edu/edulist',array('type'=>1))}"><p>♦职业资格教育</p></a>
-            <a href="{:U('Edu/edulist',array('type'=>2))}"><p>♦技能培训</p></a>
-        </div>
-         <div id="footerlist">
-            <a href="{:U('Cooperation/index')}"><h1>协同管理</h1></a>
-            <a href="{:U('Cooperation/index',array('type'=>3))}"><p>♦协同高校</p></a>
-            <a href="{:U('Cooperation/index',array('type'=>1))}"><p>♦协同企业</p></a>
-            <a href="{:U('Cooperation/index',array('type'=>2))}"><p>♦行业协会</p></a>
-        </div> 
-        <img src="__PUBLIC__/images/erweima_05.png">
-    </div>
-</div> -->
 <div id="bottombox">
 	<div id="bottom">
-    	<p>copyright:&copy;江苏科技大学&江苏科技大学苏州理工学院</p>
-        <p>owner: <a href="javascript:void(0);" onclick="toMaster()">cm&xj</a></p>
+    	<p>copyright:&copy;江苏科技大学&amp;江苏科技大学苏州理工学院</p>
+        <p>owner: <a href="javascript:void(0);" onclick="toMaster()">cm&amp;xj</a></p>
        
     </div>
 </div>
