--- a/Public/css/home/personal.css
+++ b/Public/css/home/personal.css
@@ -49,7 +49,7 @@ ul{
 	background: #146FBD;
 }
 #nav_box li>a{
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: bold;
 	padding: 16px 30px;
 }
@@ -93,44 +93,14 @@ ul{
 	overflow: hidden;
 	clear: both;
 }
-/*#footerbox{ 
-	width: 100%;
-	background-image:url(../../images/footerbackground.png);
-	position: absolute;
-	bottom: 40px;
-}
-#footer{
-	width:1000px;
-	margin-left:auto; 
-	margin-right:auto; 
-	overflow:hidden;
-}
-#footerlist{ 
-	width:120px; 
-	height:170px; 
-	float:left;
-}
-#footerlist a h1{ 
-	font-size:16px; 
-	color:#666; 
-	margin-top:30px; 
-	margin-bottom:20px; 
-	line-height:16px;
-}
-#footerlist a p{
-	color:#666; 
-	line-height:22px;
-}
-#footer img{ 
-	margin-top:27px; 
-	float:right; 
-	margin-left:15px;
-}*/
+
+
 #bottombox{
 	width: 100%;
-	height: 40px;
-/*	position: absolute;
-	bottom: 0;*/
+	border-top: 1px solid #ddd;
+	padding-top: 15px;
+	height: 60px;
+	box-sizing: border-box;
 }
 #bottom{
 	width: 1100px;
@@ -141,8 +111,12 @@ ul{
 	font-size: 12px;
 }
 #bottom a{
-	color: #234;
+	color: #000;
 }
-/*div#footerlist p:hover{
+div#footerlist p:hover{
 	background-color: #999;
-}*/
+}
+.buttom_fixed{
+	position: fixed;
+	bottom: 0;
+}
