for sae : 一次添加多个成就

--- a/Application/Home/View/Expert/expertlist.html
+++ b/Application/Home/View/Expert/expertlist.html
@@ -83,7 +83,10 @@
         <div class="leftmain">
             <div class="mainlefttitle"><img src="__PUBLIC__/images/科技团队.png"></div>
             <div class="mainbtn">
-                <div class="navlist">
+                <div class="navlist table_head active" >
+                    <a href="#">专家团队</a>
+                </div>
+                <div class="navlist ">
                     <a href="{:U('Team/teamlist')}">团队信息</a>
                 </div>
                  <div class="navlist active">
