--- a/Application/Master/View/Edu/add_modify.html
+++ b/Application/Master/View/Edu/add_modify.html
@@ -88,7 +88,7 @@
 			window.UEDITOR_CONFIG.initialFrameWidth = $(document).width()*0.7;
 			window.UEDITOR_CONFIG.toolbars = [['fullscreen', 'customstyle', 'paragraph', 'fontfamily', 'fontsize', '|', 'undo', 'redo', '|', 'bold', 'italic', 'underline', 'fontborder', 'strikethrough', 'superscript', 'subscript', 'removeformat', 'formatmatch', 'autotypeset', 'pasteplain', '|', 'forecolor', 'backcolor', 'insertorderedlist', 'insertunorderedlist', 'selectall', 'cleardoc', '|', 'rowspacingtop', 'rowspacingbottom', 'lineheight', '|', 'indent', '|', 'justifyleft', 'justifycenter', 'justifyright', 'justifyjustify', '|', 'link', 'unlink',/* '|', 'imagenone', 'imageleft', 'imageright', 'imagecenter', '|', 'simpleupload', 'insertimage', 'attachment', 'pagebreak', 'background',*/ '|', 'horizontal', 'date', 'time', /*'wordimage',*/ '|', 'inserttable', 'deletetable', 'insertparagraphbeforetable', 'insertrow', 'deleterow', 'insertcol', 'deletecol', 'mergecells', 'mergeright', 'mergedown', 'splittocells', 'splittorows', 'splittocols', 'charts', '|', 'prng eview', 'searchreplace']];
 			window.UEDITOR_CONFIG.elementPathEnabled = false;
-			window.UEDITOR_CONFIG.maximumWords = 1000;
+			// window.UEDITOR_CONFIG.maximumWords = 1000;
 			var ue = UE.getEditor('content',{serverUrl :'{:U('Master/Index/ueditor')}'});
 			
 		});
