--- a/Application/Master/View/Cooperation/coo_list.html
+++ b/Application/Master/View/Cooperation/coo_list.html
@@ -35,7 +35,7 @@
 		</tr>
 		</volist>
 	</table>
-
+	{$page}
 	<!-- Bootstrap core JavaScript
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
