--- a/Application/Master/View/Edu/edu_list.html
+++ b/Application/Master/View/Edu/edu_list.html
@@ -18,24 +18,24 @@
 			<th>点击量</th>
 			<th>编辑</th>
 		</tr>
-	<volist name="list" id="a">
-		<tr>
-			<td><?php echo $i+C('PAGE_NUM',null,5)*(I('get.p',1,int)-1); ?></td>
-			<td><a href="{:U('Home/Edu/edu',array('id'=>$a['edu_id']))}" target="_blank">{$a.title}</a></td>
-			<td>{$a.publish_time}</td>
-			<td><?php echo ($a['status'] == 1)?"有效":"<b style=color:red>失效</b>";?></td>
-			<td>{$a.click}</td>
-			<td>
-				<a href="{:U('Master/Edu/add_modify',array('id'=>$a['edu_id']))}">修改</a>&nbsp;&nbsp;
-				<span> | </span>
-				<a href="javascript:void(0)" id="edu_list-{$a.edu_id}" value="{$a.edu_id}" onclick="del(this)">删除</a>&nbsp;&nbsp;
-				<span> | </span>
-				<a href="{:U('Master/Public/setStatus',array('id'=>$a['edu_id'],'type'=>'trian','status'=>$a['status']))}"><?php echo ($a['status'] == 1)?"设为失效":"设为有效";?></a>
-			</td>
-		</tr>
-	</volist>
+		<volist name="list" id="a">
+			<tr>
+				<td><?php echo $i+C('PAGE_NUM',null,5)*(I('get.p',1,int)-1); ?></td>
+				<td><a href="{:U('Home/Edu/edu',array('id'=>$a['edu_id']))}" target="_blank">{$a.title}</a></td>
+				<td>{$a.publish_time}</td>
+				<td><?php echo ($a['status'] == 1)?"有效":"<b style=color:red>失效</b>";?></td>
+				<td>{$a.click}</td>
+				<td>
+					<a href="{:U('Master/Edu/add_modify',array('id'=>$a['edu_id']))}">修改</a>&nbsp;&nbsp;
+					<span> | </span>
+					<a href="javascript:void(0)" id="edu_list-{$a.edu_id}" value="{$a.edu_id}" onclick="del(this)">删除</a>&nbsp;&nbsp;
+					<span> | </span>
+					<a href="{:U('Master/Public/setStatus',array('id'=>$a['edu_id'],'type'=>'trian','status'=>$a['status']))}"><?php echo ($a['status'] == 1)?"设为失效":"设为有效";?></a>
+				</td>
+			</tr>
+		</volist>
 	</table>
-
+	{$page}
 	<!-- Bootstrap core JavaScript
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
